...
            borderRadius: BorderRadius.circular(12),
          ),
        ),
        onPressed: widget.webId == null
            ? () {
                showWarning('Warning',
                    'Please first login in to upload survey!', context);
              }
            : () {
                widget.onPressed();
              },
        child: Text(
          widget.buttonStr,
...
