...
                          styleSheet: MarkdownStyleSheet(
                            p: const TextStyle(fontSize: 16),
                          ),
                        ),
                        const SizedBox(height: 30),

                        // If credentials are present, show the "Continue" button.

                        if (allCredentialsPresent)
                          Center(
                            child: SizedBox(
                              width: 260,
                              child: ElevatedButton(
...
